--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
                   <path d="M22 4L12 14.01l-3-3"></path>
                 </svg>
-                <a href="https://www.instagram.com/zeeshan_malik91/"><span class="title-font font-medium">Instagram</span></a>
+                <a href="https://www.instagram.com/zeeshan_malik91/"><span class="title-font font-medium">Click here for my "Instagram"</span></a>
               </div>
             </div>
             <div class="p-2 sm:w-1/2 w-full">
