--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                   <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
                   <path d="M22 4L12 14.01l-3-3"></path>
                 </svg>
-                <a href="https://www.youtube.com/channel/UCVKRoSWAlerVLxYEeamTeKw"><span class="title-font font-medium">Youtube</span></a>
+                <a href="https://www.youtube.com/channel/UCVKRoSWAlerVLxYEeamTeKw"><span class="title-font font-medium">Click here for my "Youtube"</span></a>
               </div>
             </div>
             <div class="p-2 sm:w-1/2 w-full">
@@ -241,7 +241,7 @@
                   <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
                   <path d="M22 4L12 14.01l-3-3"></path>
                 </svg>
-                <a href="https://api.whatsapp.com/send/?phone=919166253375"><span class="title-font font-medium">WhatsApp</span></a>
+                <a href="https://api.whatsapp.com/send/?phone=919166253375"><span class="title-font font-medium">Click here for my "WhatsApp"</span></a>
               </div>
             </div>
             <div class="p-2 sm:w-1/2 w-full">
@@ -250,7 +250,7 @@
                   <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
                   <path d="M22 4L12 14.01l-3-3"></path>
                 </svg>
-                <a href="https://t.me/zeeshan_malik91"><span class="title-font font-medium">Telegram</span></a>
+                <a href="https://t.me/zeeshan_malik91"><span class="title-font font-medium">Click here for my "Telegram"</span></a>
               </div>
             </div>
             <div class="p-2 sm:w-1/2 w-full">
@@ -259,7 +259,7 @@
                   <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
                   <path d="M22 4L12 14.01l-3-3"></path>
                 </svg>
-                <a href="https://www.facebook.com/zeeshan.zk.3"><span class="title-font font-medium">Facebook</span></a>
+                <a href="https://www.facebook.com/zeeshan.zk.3"><span class="title-font font-medium">Click here for my "Facebook"</span></a>
               </div>
             </div>
             <div class="p-2 sm:w-1/2 w-full">
@@ -268,7 +268,7 @@
                   <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
                   <path d="M22 4L12 14.01l-3-3"></path>
                 </svg>
-                <a href="https://www.linkedin.com/in/mohammed-zeeshan-sulemani-8962a6a5/"><span class="title-font font-medium">LinkedIn</span></a>
+                <a href="https://www.linkedin.com/in/mohammed-zeeshan-sulemani-8962a6a5/"><span class="title-font font-medium">Click here for my "LinkedIn"</span></a>
               </div>
             </div>
           </div>
